--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "weekly",
-  "description": "潮流周刊，记录工程师 Tw93 的不枯燥生活，每周一发布，希望你喜欢",
+  "description": "记录JasonChou不枯燥生活，希望你喜欢",
   "type": "module",
   "version": "0.2.0",
   "private": true,
   "repository": {
     "type": "git",
-    "url": "https://github.com/tw93/weekly.git"
+    "url": "https://github.com/zhouzhouchn/weekly-tw93.git"
   },
   "author": {
-    "name": "Tw93",
-    "email": "tw93@qq.com"
+    "name": "JasonChou",
+    "email": "zhouzhou.chn@foxmail.com"
   },
   "license": "MIT",
   "scripts": {
